# lspp

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  meson.build
include/: format.hh  formatTab.hh  formattedPath.hh  longListing.hh  padding.hh
src/: format.cc  formattedPath.cc  longListing.cc  main.cc  padding.cc
